# dialer

./: README.md  pyproject.toml
src/dialer/: main.py
src/dialer/domain/: operator.py  switch.py
src/dialer/util/: trie.py
test/: test_switch.py  test_trie.py
